--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "remark": "^12.0.1",
-    "remark-html": "^12.0.0"
+    "remark-html": "^12.0.0",
+		"node-fetch": ">=2.6.1"
   },
   "devDependencies": {
     "eslint": "^7.7.0",
